--- a/application/templates/comments.html
+++ b/application/templates/comments.html
@@ -12,7 +12,7 @@
                         {% if comment.deleted %}
                             comment has been deleted
                         {%else%}
-                            <li class="ct-u-borderBottomGrayLighter ct-u-marginTop10">{{ post_comment_macro(comment, dict_like) }}</li>
+                            <li class="ct-u-borderBottomGrayLighter ct-u-marginTop5 ct-u-paddingBoth10">{{ post_comment_macro(comment, dict_like) }}</li>
 
 
                         {% endif %}
