--- a/application/templates/product_comments.html
+++ b/application/templates/product_comments.html
@@ -4,7 +4,7 @@
 
 {% from 'helpers.html' import product_comment_macro with context %}
 
-    {%- for key, value in comment_tree.iteritems() recursive -%}
+    {%- for key, value in comment_tree.items() recursive -%}
 
         {% if key %}
             <li>
@@ -17,7 +17,7 @@
                     {% endif %}
                 {% endif %}
             {% endfor %}
-                <ul class="comment_ul">{{ loop(value.iteritems()) }}</ul>
+                <ul class="comment_ul">{{ loop(value.items()) }}</ul>
              </li>
         {% endif %}
     {%- endfor -%}
