--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
         {% if title %}
             <title>{{ title }} - microblog</title>
         {% else %}
@@ -13,6 +14,7 @@
             <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='style/snap.css') }}">
             <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='style/flexslider.css') }}">
             <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='style/font-awesome.css') }}">
+            <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='style/font.css') }}">
 
             <script type="text/javascript" src="{{ url_for ('static', filename= "js/jquery-3.2.1.min.js") }}" acync></script>
 
@@ -27,6 +29,7 @@
 <script type="text/javascript" src="{{ url_for ('static', filename= "js/single_post.js") }}"></script>
 
 <script>
+    $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
     $(document).ready(function(){
 
   $('.flexslider').flexslider({
